syntax = "proto3";

package casbin;

option php_generic_services = true;
option php_namespace = "Xhtkyy\\HyperfTools\\Casbin\\src\\GrpcClient";
option php_metadata_namespace = "Xhtkyy\\HyperfTools\\Casbin\\src\\GrpcClient\\GPBMetadata";


service Casbin{
  rpc getRolesForUser(UserReq) returns(RolesReply);
  rpc getUsersForRole(RoleReq) returns(UsersReply);
  rpc hasRoleForUser(UserRoleReq) returns(BoolReply);
  rpc addRoleForUser(UserRoleReq) returns(BoolReply);
  rpc deleteRoleForUser(UserRoleReq) returns(BoolReply);
  rpc deleteRolesForUser(UserReq) returns(BoolReply);
  rpc deleteUser(UserReq) returns(BoolReply);
  rpc deleteRole(RoleReq) returns(BoolReply);
  rpc deletePermission(Permissions) returns(BoolReply);
  rpc addPermissionForUser(PermissionUserReq) returns(BoolReply);
  rpc deletePermissionForUser(PermissionUserReq) returns(BoolReply);
  rpc deletePermissionsForUser(UserReq) returns(BoolReply);
  rpc getPermissionsForUser(UserReq) returns(Permissions);
  rpc hasPermissionForUser(PermissionUserReq) returns(BoolReply);
  rpc getImplicitRolesForUser(UserReq) returns(RolesReply);
  rpc getImplicitPermissionsForUser(UserReq) returns(Permissions);
  rpc getImplicitUsersForPermission(Permissions) returns(UsersReply);
  rpc getUsersForRoleInDomain(RoleReq) returns(UsersReply);
  rpc getRolesForUserInDomain(UserReq) returns(RolesReply);
  rpc getPermissionsForUserInDomain(UserReq) returns(Permissions);
  rpc addRoleForUserInDomain(UserRoleReq) returns(BoolReply);
  rpc deleteRoleForUserInDomain(UserRoleReq) returns(BoolReply);
  rpc addPolicies(PoliciesReq) returns(BoolReply);
}

message PoliciesReq{
  repeated string policies = 1;
}

message UserReq{
  string user = 1;
  string domain = 2;
}

message RoleReq{
  string role = 1;
  string domain = 2;
}

message UsersReply{
  repeated string user = 1;
}

message RolesReply{
  repeated string role = 1;
}

message UserRoleReq{
  string user = 1;
  string role = 2;
  string domain = 3;
}

message BoolReply{
  bool result = 1;
}

message Permissions{
  repeated string permission = 1;
}
message PermissionUserReq{
  string user = 1;
  string domain = 2;
  repeated string permission = 3;
}